CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(kvstore)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DELPP_NO_DEFAULT_LOG_FILE -DELPP_THREAD_SAFE")
MESSAGE("root project name: ${PROJECT_NAME}")
MESSAGE("root source dir: ${PROJECT_SOURCE_DIR}")

ADD_SUBDIRECTORY(kv_service)
ADD_SUBDIRECTORY(kv_store)
